<resources>
    <string name="app_name">HeadStart</string>
    <string name="headStartStr">Head Start!</string>
    <string name="usernameHintStr">Username</string>
    <string name="passwordHintStr">Password</string>
    <string name="employerButtonStr">Employer</string>
    <string name="applicantButtonStr">Applicant</string>
    <string name="signUpStr">Don\'t have an account? Sign up</string>
    <string name="guestButtonStr">Continue as a guest</string>
    <string name="orStr">or</string>
    <string name="logoDescriptionStr">Head Start! Logo</string>
    <string name="headstartStr">Head Start!</string>
    <string name="job1Str">Job 1</string>
    <string name="pageTitleStr">Job Postings</string>
    <string name="companyTitleStr">Company Title</string>
    <string name="jobTitleStr">Job Title</string>
    <string name="jobInformationTitleStr">Job Description</string>
    <string name="jobInformationStr">Description of Job should be inserted here</string>
    <string name="companyInformationTitleStr">Company Information</string>
    <string name="companyInformationStr">Company information should be displayed here</string>
    <string name="locationStr">Location:</string>
    <string name="requirementsStr">Requirements:</string>
    <string name="preferredSkillsStr">Preferred Skills:</string>
    <string name="timeStr">Time:</string>
    <string name="salaryStr">Salary:</string>
    <string name="benefitsStr">Benefits:</string>
    <string name="applyStr">Apply!</string>
    <string name="companyBioStr">Short Company Background</string>
    <string name="companyDescriptionTitleStr">Company Description</string>
    <string name="companyDescriptionStr">Insert company descriptions here</string>
    <string name="postJobStr">Click here to post a new job</string>
    <string name="reviewButtonStr">Review previously posted jobs</string>
    <string name="newJobTitleStr">Create a new job posting</string>
    <string name="locationTitleStr">Location</string>
    <string name="locationHintStr">State, City, Zip Code (Separated with commas as shown)</string>
    <string name="requirementsTitleStr">Requirements</string>
    <string name="preferredSkillsTitleStr">Preferred Skills</string>
    <string name="timeTitleStr">Time</string>
    <string name="salaryTitleStr">Salary ($ / hr)</string>
    <string name="benefitsTitleStr">Benefits</string>
    <string name="submitButtonStr">Submit</string>
    <string name="jopTypeTitleStr">Job Type</string>
    <string name="jobTypeHintStr">Full Time/Part Time/Internship</string>
    <string name="scheduleTitleStr">Schedule</string>
    <string name="scheduleHintStr">Days of the Week</string>
    <string name="filterMenuStr">Filter Menu</string>
    <string name="resetFilterStr">Reset Filters</string>
    <string name="applyFilterStr">Apply Filters</string>
    <string name="filterStr">Filter</string>
    <string name="job2Str">Job 2</string>
    <string name="job3Str">Job 3</string>
    <string name="job4Str">Job 4</string>
    <string name="job5Str">Job 5</string>
    <string name="job6Str">Job 6</string>
    <string name="job7Str">Job 7</string>
    <string name="job8Str">Job 8</string>
    <string name="job9Str">Job 9</string>
    <string name="job10Str">Job 10</string>
    <string name="job11Str">Job 11</string>
    <string name="job12Str">Job 12</string>
    <string name="job13Str">Job 13</string>
    <string name="job14Str">Job 14</string>
    <string name="job15Str">Job 15</string>
    <string name="job16Str">Job 16</string>
    <string name="job17Str">Job 17</string>
    <string name="job18Str">Job 18</string>
    <string name="job19Str">Job 19</string>
    <string name="job20Str">Job 20</string>
    <string name="refreshButtonStr">Refresh</string>
    <string name="ageTitleStr">Minimum Age</string>
    <string name="ageHintStr">Minimum Age</string>
    <string name="ageStr">Age</string>
    <string name="jobTypeStr">Job Type</string>
    <string name="educationStr">Education</string>
    <string name="minimumValueStr">Minimum Pay Rate ($/hr)</string>
    <string name="maximumDriveStr">Maximum Drive Distance (miles)</string>
    <string name="typeAgeStr">Type age here</string>
    <string name="currentHighSchoolStr">High School Student</string>
    <string name="highGradStr">High School Graduate</string>
    <string name="collegeStudentStr">College Student</string>
    <string name="collegeGradStr">College Graduate</string>
    <string name="fullTimeStr">Full Time</string>
    <string name="partTimeStr">Part Time</string>
    <string name="internshipStr">Internship</string>
    <string name="CoOpStr">Co-Op</string>
    <string name="fieldKeywordStr">Field Keywords (Biology, Chemistry, etc.)</string>
    <string name="enterKeywordsStr">Enter keywords here</string>
    <string name="RltvFieldExprStr">Relative Field Experience</string>
    <string name="welcomeStr">Welcome!</string>
    <string name="instructionsStr">To create an account, enter your real name, your email, and a password for your account</string>
    <string name="emailStr">Email</string>
    <string name="usernameStr">Email</string>
    <string name="passwordStr">Password</string>
    <string name="createStr">Create!</string>
    <string name="profilePageStr">Create a....</string>
    <string name="applicantAccountStr">Applicant Account</string>
    <string name="employerAccountStr">Employer Account</string>
    <string name="displayNameTitle">Name</string>
    <string name="keywordHintStr">Separate keywords with a comma (maximum of 3 keywords)</string>
    <string name="profileTitleStr">Profile</string>
    <string name="applyChangesStr">Apply Changes</string>
    <string name="returnHomeStr">Return Home</string>
    <string name="companyNameStr">Company Name</string>
    <string name="companyEmailStr">Company Email</string>
    <string name="companyPasswordStr">Password</string>
    <string name="stateStr">State</string>
    <string name="cityStr">City</string>
    <string name="zipcodeStr">Zipcode</string>
    <string name="contactInfoStr">Contact Information</string>
    <string name="phoneNumberStr">Phone Number (digits only)</string>
    <string name="emailConfirmStr">Confirm Email</string>
    <string name="noneOfAboveStr">None of the above</string>
    <string name="freshmanStr">Freshman</string>
    <string name="sophomoreStr">Sophomore</string>
    <string name="juniorStr">Junior</string>
    <string name="seniorStr">Senior</string>
    <string name="jobQuestionsStr">Supplemental Job Information</string>
    <string name="interestsStr">Interests (photography, biking, etc.) Separate with commas.</string>
    <string name="experienceStr">Experiences (tutoring, research, etc.) Separate with commas.</string>
    <string name="reviewJobStr">Your Jobs</string>
    <string name="profileStr">Your Profile</string>
    <string name="usernameDisplayStr">Your Username</string>
    <string name="emailDisplayStr">Your Email</string>
    <string name="phoneNumStr">Phone Number</string>
    <string name="phoneNumDisplayStr">Your Phone Number</string>
    <string name="addressStr">Address</string>
    <string name="locationDisplayStr">Your Location</string>
    <string name="educationDisplayStr">Your Education</string>
    <string name="ageDisplayStr">Your Age</string>
    <string name="interestsTitleStr">Interests</string>
    <string name="interestsDisplayStr">Your Interests</string>
    <string name="experiencesTitleStr">Experiences</string>
    <string name="experiencesDisplayStr">Your Experiences</string>
    <string name="editProfileStr">Edit Profile</string>
    <string name="returnJobListingStr">View Jobs</string>
    <string name="inctructionsCompanyStr">To create a company account, enter the company name, the email of contact, and a password for the account</string>
    <string name="returnHomeButtonStr">Return to Employer Page</string>
    <string name="youngStr">Least Level of Required Education</string>
    <string name="companyAddressStr">Business Location</string>
    <string name="jobLocationStr">Job Location</string>
    <string name="jobRequirementsStr">Job Requirements</string>
    <string name="jobPreferredSkillsStr">Job Preferred Skills</string>
    <string name="jobTime">Job Time</string>
    <string name="jobSalaryStr">Job Salary</string>
    <string name="jobBenefitsStr">Job Benefits</string>
    <string name="returnJobStr">Return to Jobs</string>
    <string name="editJobStr">Edit Job Information</string>
    <string name="returnJobViewStr">Return to job view</string>
    <string name="deleteJobStr">Delete Job</string>
    <string name="jobDiffStr">Job Title (Cannot be changed)</string>
    <string name="stateStringStr">Current State of Residence</string>
    <string name="StateStrStr">State</string>
    <string name="tenStr">10</string>
    <string name="ZeroStr">0</string>
    <string name="ThirtyStr">30</string>
    <string name="FortyStr">40</string>
    <string name="signOutStr">Sign Out</string>
    <string name="minEducationStr">Min. Education</string>
    <string name="jobMinAgeStr">Job Minimum Age</string>
    <string name="jobMinEducationStr">Job Minimum Required Education</string>
    <string name="applicationStr">Application Site</string>
    <string name="applicationHintStr">Company application site or home website URL</string>
</resources>
