<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewJob">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-38dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/newJobTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/newJobTitleStr"
                android:textAlignment="center"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/jobNameTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/jobTitleStr"
                android:textAlignment="center"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/jobNameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/jobTitleStr"
                android:inputType="textPersonName"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/jobInformationTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/jobInformationTitleStr"
                android:textAlignment="center"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/jobInformationText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/jobInformationTitleStr"
                android:inputType="textPersonName"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/locationTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/locationTitleStr"
                android:textAlignment="center"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/locationText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/locationHintStr"
                android:inputType="textPersonName"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/addressTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/addressStr"
                android:textAlignment="center"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/addressText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/addressStr"
                android:inputType="textPersonName"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/reuirementsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/requirementsTitleStr"
                android:textAlignment="center"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/requirementsText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/requirementsTitleStr"
                android:inputType="textPersonName"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/preferredSkillsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/preferredSkillsTitleStr"
                android:textAlignment="center"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/preferredSkillsText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/preferredSkillsTitleStr"
                android:inputType="textPersonName"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/scheduleTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/scheduleTitleStr"
                android:textAlignment="center"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/scheduleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/scheduleHintStr"
                android:inputType="textPersonName"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/salaryTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/salaryTitleStr"
                android:textAlignment="center"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/salaryText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/salaryTitleStr"
                android:inputType="number"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/benefitsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/benefitsTitleStr"
                android:textAlignment="center"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/benefitsText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/benefitsTitleStr"
                android:inputType="textPersonName"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/jobTypeTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/jopTypeTitleStr"
                android:textAlignment="center"
                android:textSize="18sp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="137dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/JobType">

                <RadioButton
                    android:id="@+id/FullTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fullTimeStr" />

                <RadioButton
                    android:id="@+id/PartTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/partTimeStr" />

                <RadioButton
                    android:id="@+id/Internship"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/internshipStr" />

                <RadioButton
                    android:id="@+id/Coop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/CoOpStr" />
            </RadioGroup>

            <TextView
                android:id="@+id/ageTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ageTitleStr"
                android:textAlignment="center"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/ageText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/ageHintStr"
                android:inputType="number"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/youngStr"
                android:textAlignment="center"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/EducationBox"
                android:layout_width="match_parent"
                android:layout_height="137dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="150dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Education">

                <RadioButton
                    android:id="@+id/CurrentHS"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/currentHighSchoolStr" />

                <RadioButton
                    android:id="@+id/HSGrad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/highGradStr" />

                <RadioButton
                    android:id="@+id/CollegeStd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/collegeStudentStr" />

                <RadioButton
                    android:id="@+id/CollegeGrad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/collegeGradStr" />
            </RadioGroup>

            <TextView
                android:id="@+id/keywordTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fieldKeywordStr"
                android:textAlignment="center"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/keywordText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/keywordHintStr"
                android:inputType="textPersonName"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/URLTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/applicationStr"
                android:textAlignment="center"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/URLText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/applicationHintStr"
                android:inputType="textPersonName"
                android:textSize="14sp" />

            <Button
                android:id="@+id/submitButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:onClick="addRandom50"
                android:text="@string/submitButtonStr" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>